--- a/src/stylesheets/First.css
+++ b/src/stylesheets/First.css
@@ -2,6 +2,18 @@
     width: 100%;
 }
 
+.question_card_main {
+    width: max-content;
+    margin: 10px;
+    margin-bottom: 0;
+}
+
+.question_card_main13 {
+    width: 100%;
+    margin: 10px;
+    margin-bottom: 0;
+}
+
 .question_header {
     display: flex;
     align-items: center;
@@ -26,6 +38,10 @@
     text-align: left;
 }
 
+.question_number_mobile {
+    display: none;
+}
+
 .unactive_number {
     color: gray;
     font-size: 25px;
@@ -33,6 +49,7 @@
 }
 
 .question_exit_btn button {
+    cursor: pointer;
     border: 2px solid;
     border-image: linear-gradient(to left, white, gray) 1;
     background: none;
@@ -43,7 +60,7 @@
 }
 
 .question_exit_btn button:hover {
-    background-color: red;
+    background-color: rgb(212, 49, 49);
     border-image: linear-gradient(to right, white, black) 1;
     transition: ease-in 0.3s;
 }
@@ -59,6 +76,7 @@
 
 .question_background {
     position: relative;
+
 }
 
 .question_background img {
@@ -67,8 +85,9 @@
     left: 0%;
     z-index: -1;
     width: 100%;
-    height: 100vh;
+    height: 130vh;
     min-height: auto;
+    object-fit: cover;
 }
 
 .question_screen {
@@ -84,22 +103,52 @@
     flex-wrap: wrap;
     justify-content: space-evenly;
     align-items: center;
+
 }
 
-.question_card {
-    background-color: white;
-    text-align: center;
-    border-radius: 5px;
-}
-
-.question_card p {
+.question_container p {
     font-size: 20px;
     font-weight: 500;
     font-family: "Brandon_reg";
-    padding-bottom: 15px;
-    line-height: 10px;
     color: black;
+    text-align: center;
 }
+
+/* edited by pavan */
+.question_card {
+    margin-top: 20px;
+    border: 3px solid #fff;
+    background: #fff;
+    border-radius: 5px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.question_card_selected {
+    background: #CDAF4C;
+    border: 3px solid #CDAF4C;
+    text-align: center;
+    border-radius: 5px;
+    margin-top: 20px;
+}
+
+.question_card_selected_btn {
+    height: 40px;
+    width: 250px;
+    border-radius: 5px;
+    font-family: "Brandon_reg";
+    font-size: 18px;
+    font-weight: 500;
+    text-align: center;
+    border: none;
+    background: #CDAF4C;
+}
+
+/* edited by pavan */
+
+
 
 .btns {
     display: flex;
@@ -127,7 +176,7 @@
     font-family: "Brandon_reg";
     resize: none;
     height: 250px;
-    width: 600px;
+    width: 100%;
     border: 1px solid white;
     background: none;
     font-size: 16px;
@@ -137,6 +186,7 @@
 .textarea:focus {
     outline: none;
 }
+
 .quize_btn {
     height: 40px;
     width: 250px;
@@ -163,116 +213,132 @@
 
 }
 
-@media screen and (max-width:1200px) {
 
-    .question_number,
-    .unactive_number {
-        font-size: 25px;
+@media screen and (max-width:750px) {
+
+    /* edited by pavan */
+    .question_card {
+        margin-top: 20px;
+        border: 3px solid #fff;
+        background: #fff;
+        border-radius: 5px;
+        cursor: pointer;
+        margin: 10%;
+        width: 120px;
+    }
+
+    .question_card_selected img {
+        width: 120px;
+    }
+
+    .question_card img {
+        width: 120px;
+        object-fit: cover;
+    }
+
+    .question_card_selected {
+        margin-top: 20px;
+        border: 3px solid #CDAF4C;
+        background: #CDAF4C;
+        border-radius: 5px;
+        cursor: pointer;
+        margin: 10%;
+        width: 120px;
+    }
+
+    .question_card p {
+        font-size: 18px;
+    }
+
+    .question_card_selected p {
+        font-size: 18px;
+    }
+
+    .question_card_selected_btn {
+        height: 40px;
+        width: 250px;
+        border-radius: 5px;
+        font-family: "Brandon_reg";
+        font-size: 18px;
+        font-weight: 500;
+        text-align: center;
+        border: none;
+        background: #CDAF4C;
+    }
+
+    .question_number {
+        display: none;
+    }
+
+    .question_number_mobile {
+        display: block;
+        text-align: center;
+    }
+
+    .question_number h1 {
+        font-size: 22px;
+    }
+    .unactive_number{
+        color: #CDAF4C;
+    }
+
+    /* edited by pavan */
+
+
+    .question_container {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: flex-start;
+    }
+
+    .question_title {
+        color: black;
+        font-size: 22px;
     }
 
     .question_background img {
-        height: 170vh;
+        /* display: none; */
     }
 
-    .unactive_number {
-        font-size: 20px;
+    .btns button {
+        color: black;
     }
-
 
     .question_screen {
-        margin: 5% 5% 10% 5%;
-    }
-}
-
-/* @media screen and (max-width:1100px) {
-        .question_background img{
-            height: 190vh;
-        }
-        .question_background img{
-            height: 190vh;
-        }
-
-        .question_screen{
-            margin: 5% 5% 15% 5%;
-        }
-
+        margin: 5% 5% 5% 5%;
+        background: rgba(255, 255, 255, 0.4);
     }
 
-    @media screen and (max-width:900px) {
-        .question_background img{
-            height: 200vh;
-        }
-        .question_background img{
-            height: 200vh;
-        }
-        .question_screen{
-            margin: 5% 5% 25% 5%;
-        }
+    /* #first_question {
+        margin-bottom: -5%;
     }
-        @media screen and (max-width:825px) {
 
-            .question_background img{
-                height: 220vh;
-            }
-            .question_background img{
-                height: 220vh;
-            }
-            .question_screen{
-                margin: 5% 5% 35% 5%;
-            }
-         
+    #second {
+        margin-bottom: 40%;
+    }
+
+    #three {
+        margin-bottom: 50%;
+    }
+
+    #nine {
+        margin-bottom: 100%;
+    }
+
+    #ten {
+        margin-bottom: 100%;
+    }
+
+    #Eleven {
+        margin-bottom: 100%;
+    }
+
+    #twelve {
+        margin-bottom: 100%;
+    }
+
+    #thirteen .question_container {
+        background-color: gray;
     } */
-
-    @media screen and (max-width:550px) {
-        .question_card p {
-            font-size: 18px;
-            padding-bottom: 10px;
-        }
-        .question_card img{
-            height: 150px;
-            width: 200px;
-        }
-        .question_container {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content:center;
-            align-items: flex-start;
-        }
-        .question_title{
-            color: black;
-            font-size: 30px;
-        }
-        .question_background img{
-            display: none;
-        }
-        .btns button{
-            color: black;
-        }
-        .question_screen{
-            margin: 5% 5% 5% 5%;
-        }
-        #first_question{
-            margin-bottom: -5%;
-        }
-        #second{
-            margin-bottom: 40%;
-        }
-        #three{
-            margin-bottom: 50%;
-        }
-        #nine{
-            margin-bottom: 100%;
-        }
-        #ten{
-            margin-bottom: 100%;
-        }
-        #Eleven{
-            margin-bottom: 100%;
-        }
-        #twelve{
-            margin-bottom: 100%;
-        }
-        #thirteen .question_container{
-            background-color:gray;
-        }
-    }
+}
