--- a/src/stylesheets/About.css
+++ b/src/stylesheets/About.css
@@ -11,13 +11,17 @@
 }
 
 .about_img {
-    height: 350px;
-    width: 500px;
+    height: 100%;
+    width: 100%;
 }
 
 .about-right {
     flex: 50%;
     padding-left: 8%;
+    padding-left: 8%;
+    flex-direction: column;
+    align-content: center;
+    justify-content: center;
 }
 
 .about-right-heading {
@@ -33,7 +37,6 @@
     color: white;
     font-family: "Brandon_reg";
     font-weight: 600;
-    margin-top: -10px;
 }
 
 .animinated-line {
@@ -75,7 +78,7 @@
     text-align: left;
     color: #CDAF4C;
     line-height: 50px;
-    margin-top: 0%;
+    margin: 1% 0;
 }
 
 .about_us_desc {
@@ -95,6 +98,7 @@
     text-align: center;
     color: white;
     padding: 5px;
+    margin: 3% 0;
 }
 
 .book_appointment_btn:hover {
@@ -102,6 +106,7 @@
     border-image: linear-gradient(to right, white, black) 1;
     padding-left: 10px;
     transition: ease-in 0.3s;
+    cursor: pointer;
 }
 
 @media screen and (max-width: 900px) {
@@ -111,7 +116,7 @@
     }
 
     .about_img {
-        height: 310px;
+        height: 100%;
         width: 100%;
     }
 
@@ -129,20 +134,45 @@
         margin-bottom: 5%;
     }
 
+
 }
 
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 750px) {
     .about-main {
         flex-direction: column-reverse;
-        padding: 5px 30px 5px 30px;
+        padding: 3%;
 
+    }
+
+    .about_us_heading {
+        width: 50%;
+
+    }
+
+    .animinated-line {
+        width: 50%;
+        background-image: linear-gradient(to right, #CDAF4C, rgb(0, 0, 0));
+        margin-left: 25px;
+        transform-origin: left;
+        transform: scaleX(0);
+        animation: animate 3s infinite reverse;
+    }
+
+    .about-left {
+        width: 100%;
     }
 
     .about_img {
-        height: 210px;
         width: 100%;
+        height: 100%;
     }
+
+    .about-right {
+        padding-left: 0%;
+        
+    }
+
 
     .about_us_title {
         font-size: 40px;
@@ -154,8 +184,11 @@
 
 
     .book_appointment_btn {
-        margin-left: 15%;
-        margin-bottom: 5%;
+        margin: 5%;
+        margin-left: 0%;
     }
 
+    .about_img {
+        width: 100%;
+    }
 }
