--- a/src/stylesheets/Choose.css
+++ b/src/stylesheets/Choose.css
@@ -106,8 +106,7 @@
     font-weight: 600;
 }
 
-.warranty_list {
-}
+.warranty_list {}
 
 .warranty_list li {
     font-size: 24px;
@@ -119,11 +118,9 @@
     font-size: 48px;
     color: white;
     font-family: "Brandon_reg";
-    margin-top: 0%;
 }
 
-.technology_list {
-}
+.technology_list {}
 
 .technology_list li {
     font-size: 24px;
@@ -133,27 +130,24 @@
     font-family: "Brandon_reg";
 
 }
+
 @media screen and (max-width: 900px) {
     .choose_main {
         padding: 5px 30px 5px 30px;
 
     }
 
-.about_us_second {
-        padding-left: 30px;
+    .about_us_second {
+        padding-left: 3%;
     }
 
     .choose_warranty_section h1 {
         font-size: 30px;
     }
 
-    .choose_us_section2 {
-        margin-bottom: 0%;
-    }
+    .choose_us_section2 {}
 
-    .warranty_list {
-        margin-top:-2%;
-    }
+    .warranty_list {}
 
     .warranty_list li {
         font-size: 22px;
@@ -162,12 +156,9 @@
 
     .choose_technology_section h1 {
         font-size: 30px;
-        margin-top: 0%;
     }
 
-    .technology_list {
-        margin-top: -2%;
-    }
+    .technology_list {}
 
     .technology_list li {
         font-size: 22px;
@@ -175,34 +166,48 @@
     }
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 750px) {
+    .choose_main {
+        padding: 3%;
+    }
+
     .choose_section_heading {
         font-size: 40px;
-        padding-left: 30px;
         padding-bottom: 10px;
     }
 
-    .animinated-line {
-        margin: -35px 0px 10% 15%;
+     .animinated-line {
+        margin: 0px 0px 10% 15%;
     }
 
     .choose_icon_section {
-        flex-direction: column;
-        padding-left: 30px;
+        flex-direction: row;
+        flex-wrap: wrap;
+        padding-left: 3%;
     }
+
+    .choose_us_section {
+        flex-direction: column;
+        /* justify-content: center; */
+        align-items: center;
+        width: 50%;
+    }
+
+    .choose_us_desc {
+        margin: 0;
+        text-align: center;
+    }
+
     .choose_us_section2 {
         margin-bottom: 7%;
     }
 
-    .warranty_list {
-        margin-top: -15%;
-    }
+    .warranty_list {}
 
     .warranty_list li {
         font-size: 22px;
         line-height: 30px;
     }
-    .technology_list {
-        margin-top: -15%;
-    }
+
+    .technology_list {}
 }
