--- a/src/stylesheets/Construction.css
+++ b/src/stylesheets/Construction.css
@@ -13,6 +13,7 @@
     text-align: left;
     color: white;
     text-transform: uppercase;
+    padding: 4% 0;
 }
 
 .construction_detail {
@@ -26,7 +27,21 @@
 }
 
 .residental_construction_img {
-    height: 350px;
+    height: 90%;
+    width: 90%;
+    padding: 4px;
+    background:
+    linear-gradient(to right, #CDAF4C 4px, transparent 4px) 0 0,
+    /* linear-gradient(to right, #CDAF4C 4px, transparent 4px) 0 100%, */
+    /* linear-gradient(to left, #CDAF4C 4px, transparent 4px) 100% 0, */
+    linear-gradient(to left, #CDAF4C 4px, transparent 4px) 100% 100%,
+    linear-gradient(to bottom, #CDAF4C 4px, transparent 4px) 0 0,
+    /* linear-gradient(to bottom, #CDAF4C 4px, transparent 4px) 100% 0, */
+    /* linear-gradient(to top, #CDAF4C 4px, transparent 4px) 0 100%, */
+    linear-gradient(to top, #CDAF4C 4px, transparent 4px) 100% 100%;
+
+  background-repeat: no-repeat;
+  background-size: 8% 12%;
 }
 
 .construction_right {
@@ -56,9 +71,13 @@
     font-family: "Brandon_reg";
 }
 
-@media screen and (max-width:900px) {
+@media screen and (max-width: 750px) {
     .construction_main {
-        padding: 5px 30px 5px 30px;
+        padding: 3%;
+    }
+
+    .construction_main h1 {
+        font-size: 32px;
     }
 
     .construction_detail {
@@ -66,26 +85,12 @@
     }
 
     .residental_construction_img {
-        height: 310px;
-        width: 500px;
+      width: 100%;
+      height: 100%;
     }
 
     .residental_construction_title {
         font-size: 40px;
         padding-top: 10px;
     }
-}
-
-@media screen and (max-width:480px) {
-    .residental_construction_img {
-        height: 210px;
-        width: 300px;
-    }
-
-    .residental_construction_title {
-        font-size: 35px;
-        padding-top: 10px;
-    }
-
-
 }
