--- a/src/stylesheets/Home.css
+++ b/src/stylesheets/Home.css
@@ -1,16 +1,17 @@
 .home-main {
     height: 90vh;
     width: 100%;
+    position: relative;
 }
 
-.background-overlay {
+/* .background-overlay {
     z-index: 11;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.3));
+    background-image: linear-gradient(rgba(0, 0, 0, 0.825), rgba(0, 0, 0, 0.3));
     width: 100%;
     height: 90vh;
     position: absolute;
     left: 0%;
-}
+} */
 
 .background-slider img {
     width: 100%;
@@ -25,12 +26,12 @@
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: 99;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
     text-align: center;
+    justify-content: center;
+   background: rgba(0, 0, 0, 0.563);
 }
 
 .home-sub-tagline {
@@ -65,6 +66,7 @@
     padding: 5px;
     color: white;
     font-family: "Brandon_reg";
+    margin-top: 2%;
 }
 
 .book-appointment-btn:hover {
@@ -75,11 +77,7 @@
 }
 
 @media screen and (max-width: 900px) {
-    .slider-text {
-        top: 25%;
-        padding: 5px 10px 5px 10px;
-
-    }
+ 
 
     .home-tagline {
         font-size: 55px;
@@ -87,25 +85,15 @@
         line-height: 55px;
     }
 
-    .home-description {
-        margin-top: -20px;
-    }
+    .home-description {}
 }
 
-/* @media screen and (max-width: 480px) {
-            .slider-text{
-                top:25%;
-                padding: 5px 10px 5px 10px;
-        
-            }
-            .home-tagline{
-                font-size:55px;
-                color: white;
-                line-height: 55px;
-                }
-                
-            .home-description{
-                    margin-top: -20px;
-                }
-            }
-         */
+@media screen and (max-width: 750px) {
+    .home-tagline {
+        font-size: 38px;
+    }
+
+    .home-description {
+        font-size: 22px;
+    }
+}
