--- a/src/stylesheets/HomeInterior.css
+++ b/src/stylesheets/HomeInterior.css
@@ -1,4 +1,4 @@
-.homeInterior_main{
+.homeInterior_main {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -6,63 +6,96 @@
     height: 100%;
 
 }
-.homeInterior_left{
-    flex: 50%;
+
+.homeInterior_left {
+    width: 50%;
 }
-.homeInterior_title{
-font-size: 48px;
-text-align: left;
-font-family: "Brandon_reg";
-line-height: 50px;
+
+.homeInterior_title {
+    font-size: 48px;
+    text-align: left;
+    font-family: "Brandon_reg";
+    line-height: 50px;
 
 }
-.homeInterior_desc{
-font-size: 24px;
-text-align: left;
-font-family: "Brandon_reg";
+
+.homeInterior_desc {
+    font-size: 24px;
+    text-align: left;
+    font-family: "Brandon_reg";
 
 }
-.homeInterior_btn{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-image: linear-gradient(to right, black, white) 1;
-    background:none;
-    padding-left: 10px;
-    margin-top: 6%;
+
+.homeInterior_btn {
+    content: "Download";
+    height: 48px;
+    border: 2px solid;
+    border-image: linear-gradient(to right, white, black) 1;
+    background: none;
+    font-size: 24px;
+    font-weight: 420;
+    text-align: center;
+    color: #000;
+    font-family: "Brandon_med";
+    padding: 3px 40px 3px 40px;
+    position: relative;
+    transition: ease-in 0.3s;
+    margin: 4% 0;
 
 }
-.homeInterior_btn p{
+
+.homeInterior_btn:hover {
+    content: "Book Free Consultation";
+    background-color: #CDAF4C;
+    border-image: linear-gradient(to right, white, black) 1;
+    cursor: pointer;
+    padding: 3px 45px 3px 45px;
+}
+
+.homeInterior_btn p {
     padding-left: 10px;
     font-family: "Brandon_med";
-    font-size:16px;
+    font-size: 16px;
 }
-.homeInterior_right img{
-    height: 400px;
-    margin: 20px 0px 20px 0px;
-    z-index: -1;
+
+.homeInterior_right {
+    width: 50%;
 }
-@media screen and (max-width:900px) {
-    .homeInterior_main{
+
+.homeInterior_right img {
+    width: 90%;
+    height: 90%;
+    padding: 4px;
+    background: linear-gradient(to right, #CDAF4C 4px, transparent 4px) 0 0,
+        /* linear-gradient(to right, #CDAF4C 4px, transparent 4px) 0 100%, */
+        /* linear-gradient(to left, #CDAF4C 4px, transparent 4px) 100% 0, */
+        linear-gradient(to left, #CDAF4C 4px, transparent 4px) 100% 100%, linear-gradient(to bottom, #CDAF4C 4px, transparent 4px) 0 0,
+        /* linear-gradient(to bottom, #CDAF4C 4px, transparent 4px) 100% 0, */
+        /* linear-gradient(to top, #CDAF4C 4px, transparent 4px) 0 100%, */
+        linear-gradient(to top, #CDAF4C 4px, transparent 4px) 100% 100%;
+    background-repeat: no-repeat;
+    background-size: 8% 12%;
+}
+
+@media screen and (max-width:750px) {
+    .homeInterior_main {
         flex-direction: column;
-        padding: 5px 30px 5px 30px;
-    }
-    .homeInterior_title{
-        font-size: 40px;
-    }
-    .homeInterior_right img{
-        height: 70vh;
-        width: 500px;
+        padding: 3%;
     }
 
+    .homeInterior_left {
+        width: 100%;
+    }
+
+    .homeInterior_right {
+        width: 100%;
+    }
+.homeInterior_right img{
+    width: 100%;
 }
-@media screen and (max-width:480px){
-    .homeInterior_title{
-        font-size: 45px;
+    .homeInterior_title {
+        font-size: 32px;
     }
-    .homeInterior_right img{
-        height: 50vh;
-        width:100%;
-    }
+
 
 }
