--- a/src/stylesheets/OurProject.css
+++ b/src/stylesheets/OurProject.css
@@ -11,7 +11,8 @@
     text-align: right;
     color: white;
 }
-.titleLine{
+
+.titleLine {
     display: flex;
     justify-content: end;
     align-items: center;
@@ -50,8 +51,21 @@
     }
 }
 
-@media screen and (max-width:480px) {
+@media screen and (max-width:750px) {
     .our_project_main {
-        padding: 5px 30px 5px 30px;
+        /* padding: 5px 30px 5px 30px; */
+        padding: 3%;
     }
+
+    .titleLine {
+        display: flex;
+        flex-direction: column;
+        align-items: start;
+
+    }
+
+    .titleLine h1 {
+        font-size: 40px;
+    }
+
 }
