--- a/src/stylesheets/Testimonials.css
+++ b/src/stylesheets/Testimonials.css
@@ -1,6 +1,7 @@
 .testimonials-main{
     padding: 10px 60px 5px 60px;
     background: #222831;
+    height: 500px;
 }
 @media screen and (max-width:480px) {
     .testimonials-main{
